# rmk-for-sofle

./: Cargo.toml  Makefile.toml  README.md  build.rs  keyboard.toml  memory.x  rust-toolchain.toml  sofle-rmk-viewer.html  vial.json
.github/workflows/: build.yml
config/: keyboard.toml  vial.json
scripts/: keymap_docs.py
src/: bitmaps.rs  central.rs  lib.rs  parix.rs  peripheral.rs  rgb.rs  status.rs
